--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="javascript.js"></script>
   </head>
-  <body></body>
+  <body>
+    <h1>Rock-Paper-Scissors Game</h1>
+    <div>
+      <p>Make a choice:</p>
+      <button id="rock">rock</button>
+      <button id="paper">paper</button>
+      <button id="scissors">scissors</button>
+    </div>
+    <div class="results"></div>
+    <script src="javascript.js"></script>
+  </body>
 </html>
